# onboarding-assistant-v2

./: README.md  api.py  pyproject.toml
docs/: docs_tecnicos.txt  manual_rh.txt
src/onboarding_assistant_v2/: main.py
src/onboarding_assistant_v2/crews/onboarding_crew/: onboarding_crew.py
src/onboarding_assistant_v2/crews/onboarding_crew/config/: agents.yaml  tasks.yaml
src/onboarding_assistant_v2/tools/: custom_tool.py
