[project]
name = "onboarding_assistant_v2"
version = "0.1.0"
description = "onboarding-assistant-v2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.2,<2.0.0"
]

[project.scripts]
kickoff = "onboarding_assistant_v2.main:kickoff"
run_crew = "onboarding_assistant_v2.main:kickoff"
plot = "onboarding_assistant_v2.main:plot"
run_with_trigger = "onboarding_assistant_v2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
